--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,59 +1,38 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CI
-
-# Controls when the workflow will run
-on:
-  # Triggers the workflow on push or pull request events but only for the gh-pages branch
+'on':
   push:
-    branches: [ gh-pages ]
+    branches:
+      - gh-pages
   pull_request:
-    branches: [ gh-pages ]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
+    branches:
+      - gh-pages
+  workflow_dispatch: null
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-
-      # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
-
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-access-key-id: '${{ secrets.AWS_ACCESS_KEY_ID }}'
+          aws-secret-access-key: '${{ secrets.AWS_SECRET_ACCESS_KEY }}'
           aws-region: us-east-1
-
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
-
-      - name: Build, tag, and push image to Amazon ECR
+      - name: 'Build, tag, and push image to Amazon ECR'
         env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR_REGISTRY: '${{ steps.login-ecr.outputs.registry }}'
           ECR_REPOSITORY: myprojectdemos
-          IMAGE_TAG: ${{ github.sha }}
+          IMAGE_TAG: '${{ github.sha }}'
       - name: sast-scan
-      # You may pin to the exact commit or the version.
-      # uses: AppThreat/sast-scan-action@4d0f956e6ba3c940a22679fd8fe7cb2e755f3d96
-        uses: AppThreat/sast-scan-action@1.0.2
-        with:
-      # Source directory to scan. Defaults to workspace
-        src: # optional, default is /github/workspace
-      # Output directory for the generated reports. Defaults to reports
-        output: # optional, default is /github/workspace/reports
-      # Project type. Eg: java, python, nodejs. Comma separated values allowed.
-        type: # optional
+      - uses: AppThreat/sast-scan-action@1.0.2
+        with: null
+        src: null
+        output: null
+        type: null
